3. Fix usage of 'flat' appearance.
4. Fix light tab border when appearance set to flat.
5. Add an experimental option to hide/unhide menubars using Ctrl-Alt-M.
6. Respect double arrow setting for non-editable combos on more Gtk2
   combo types. (Affects combos in pidgin.)
7. Colour arrows on mouse over of non-editable combos on more Gtk2
   combo types. (Affects combos in pidgin.)

0.68.1
------
1. Fix reading of 'dark inverted gradient' setting.
2. Allow toggle buttons to be max rounded.
3. Fix combo-box arrow position when not etched/shadowed.
4. Fix default value for 'double Gtk combo arrow' setting.
5. Fix https://bugzilla.novell.com/show_bug.cgi?id=529607

0.68.0
------
1. New options:
    Control whether icons are displayed in menus
    Force alternate colours in listviews
    Square selections in listviews

0.67.5
------
1. Use same shade for all menu item separators.
2. Fix clipping of non-V style right arrow.
3. Dont draw 3D border around poup menus when border has been disabled, but
   shading set to 0%
4. Offset sunken slider thumbs to improve appearance.

0.67.4
------
 1. If drawing square scrollviews, give these a similar 3d effect to rounded ones.
 2. Move menuitem arrows 2 pixels to the left, to match KDE4 better.
 3. Fix button of non-editable combos when not etching entries.
 4. Fix spin buttons when not etching entries.
 5. Only do mouse over for entries if combos and spin widgets are unified.
 6. If not etching/shadowing, when mouse over set to 'glow' use 'thick coloured'
 7. If not etching/shadowing, decrease thinner scrollbar groove.
 8. Fix clipping of shaded button on combos when not etching/shadowing.
 9. Remove hard-coding of light border in progressbars - use gradient setting.
10. Slightly better button metrics when not etching/shadowing.

0.67.3
------
1. If a buttons requested size is not a multiple of 2, then shift the text 1
   pixel lower.
2. Fix plastik style mouse over on scrollbars.

0.67.2
------